@@ -26,7 +26,6 @@ public class DocumentUtils {
 		return tags [last_index];
 	}
 	
-	
 	public static int AddString (TextBuffer buffer, int offset, string data, string suffix)
 	{
 		TextIter insertAt = buffer.GetIterAtOffset (offset);
@@ -40,12 +39,56 @@ public class DocumentUtils {
 		return insertAt.Offset;
 	}
 	
+	public static void AddString (TextBuffer buffer, ref TextIter insertAt, string data, string suffix)
+	{
+		DocumentTagTable tagTable = (DocumentTagTable) buffer.TagTable;
+		TextTag tag = tagTable.Lookup ("format" + suffix);
+		
+		if (tag == null)
+			tag = tagTable.CreateDynamicTag ("format" + suffix);
+		buffer.InsertWithTags (ref insertAt, data, tag);
+	}
+	
+	
 	public static int AddNewLine (TextBuffer buffer, int offset, string suffix)
 	{
 		TextIter insertAt = buffer.GetIterAtOffset (offset);
 		// AddNewLine (buffer, ref insertAt, suffix);
 		
 		return insertAt.Offset;
+	}
+	
+	public static void AddNewLine (TextBuffer buffer, ref TextIter insertAt, string suffix)
+	{
+		DocumentTagTable tagTable = (DocumentTagTable) buffer.TagTable;
+		TextTag tag = tagTable.Lookup ("newline" + suffix);
+		
+		if (tag == null)
+			tag = tagTable.CreateDynamicTag ("newline" + suffix);
+		buffer.InsertWithTags (ref insertAt, "\n", tag);
+	}
+	
+	public static int AddPadding (TextBuffer buffer, int offset, string suffix)
+	{
+		TextIter insertAt = buffer.GetIterAtOffset (offset);
+		DocumentTagTable tagTable = (DocumentTagTable) buffer.TagTable;
+		TextTag tag = tagTable.Lookup ("padding" + suffix);
+		
+		if (tag == null)
+			tag = tagTable.CreateDynamicTag ("padding" + suffix);
+		buffer.InsertWithTags (ref insertAt, " ", tag);
+		
+		return insertAt.Offset;
+	}
+	
+	public static void AddPadding (TextBuffer buffer, ref TextIter insertAt, string suffix)
+	{
+		DocumentTagTable tagTable = (DocumentTagTable) buffer.TagTable;
+		TextTag tag = tagTable.Lookup ("padding" + suffix);
+		
+		if (tag == null)
+			tag = tagTable.CreateDynamicTag ("padding" + suffix);
+		buffer.InsertWithTags (ref insertAt, " ", tag);
 	}
 }
 }
